--- a/webresearcher/custom.css
+++ b/webresearcher/custom.css
@@ -1,3 +1,30 @@
+.userButtonPanelWBJS {
+  left: 94%; 
+  bottom: 50%; 
+  height: 7%; 
+  position: fixed; 
+  width: 5%; 
+  z-index:100; 
+}
+
+.WBJSNote {
+  height: 200px; 
+  width: 350px;
+  border: none;
+  color: black;  
+  padding-right: 75px; 
+  padding-left: 25px;
+  padding-top: 25px;
+  padding-bottom: 25px; 
+  text-align: enter;
+  text-decoration: none;  
+  display: inline-block; 
+  overflow:auto;
+  resize:both;
+}
+
+
+/* colors used for highlighting */
 .color1 {
   padding: 0;
   background-color:#96ceb4;
@@ -45,3 +72,58 @@
   background-color:#ddeedd;
   opacity:80%;
 }
+
+/* From BootstrapJS */
+.btn {
+  display: inline-block;
+  font-weight: 400;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  border: 1px solid transparent;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  border-radius: 0.25rem;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.btn-primary {
+  color: #fff;
+  background-color: #007bff;
+  border-color: #007bff;
+}
+
+.btn-lg, .btn-group-lg > .btn {
+  padding: 0.5rem 1rem;
+  font-size: 1.25rem;
+  line-height: 1.5;
+  border-radius: 0.3rem;
+}
+
+.badge {
+  display: inline-block;
+  padding: 0.25em 0.4em;
+  font-size: 75%;
+  font-weight: 700;
+  line-height: 1;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: baseline;
+  border-radius: 0.25rem;
+}
+
+/* jQuery-sidebar css */
+
+.sidebar.left {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  width: 270px;
+}
+
