--- a/webresearcher/custom.css
+++ b/webresearcher/custom.css
@@ -24,6 +24,20 @@
 }
 
 
+.buttonWBJS {
+  background-color: #04AA6D;
+  border: none;
+  color: white;
+  padding: 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  border-radius:60%;
+}
+
+
 /* colors used for highlighting */
 .color1 {
   padding: 0;
