--- a/webresearcher/custom.css
+++ b/webresearcher/custom.css
@@ -10,20 +10,35 @@
 }
 
 .WBJSNote {
-  height: 200px; 
+  position: absolute;
+  border: 2px solid #ddd;
+  height: 200px;
   width: 350px;
   border: none;
-  color: black;  
-  padding-right: 75px; 
-  padding-left: 25px;
-  padding-top: 25px;
-  padding-bottom: 25px; 
-  text-align: enter;
-  text-decoration: none;  
-  display: inline-block; 
-  overflow:auto;
-  resize:both;
+  color: black;
+  padding: 25px 75px 25px 25px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  overflow: auto;
+  resize: both;
+  box-sizing: border-box; /* To include padding and border in element's total width and height */
+
+  /* Added properties for a fancy look */
+  background-color: #f9f9f9;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  font-family: 'Arial', sans-serif;
+  line-height: 1.6;
+  transition: all 0.05s ease; /* Increased transition duration for smoother effect */
 }
+
+.WBJSNote:hover {
+  height:350px;
+  background-color: #e9e9e9;
+  box-shadow: 0px 12px 20px 0px rgba(0,0,0,0.3);
+  transform: scale(1.5);
+}
+
 
 
 .buttonWBJS {
