--- a/webresearcher/custom.css
+++ b/webresearcher/custom.css
@@ -39,7 +39,7 @@
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   font-family: 'Arial', sans-serif;
   line-height: 1.6;
-  transition: all 0.05s ease; /* Increased transition duration for smoother effect */
+  /* transition: all 0.01s ease; Increased transition duration for smoother effect */
 }
 
 .WBJSNote:hover {
@@ -48,6 +48,13 @@
 }
 
 
+.mover {
+  display: inline-block;
+  padding:10px;
+  cursor:move;
+  width:100%;
+  text-align:center;
+}
 
 .buttonWBJS {
   background-color: #04AA6D;
