--- a/webresearcher/custom.css
+++ b/webresearcher/custom.css
@@ -238,8 +238,8 @@
 }
 .tooltip {
   position: absolute;
-  background-color: black;
-  color: white;
+  /* background-color: black;
+  color: white; */
   /* padding: 5px; */
   /* border-radius: 5px; */
   display: none;
