Fixing tooltip display issues
- Tooltip did not always display on top of all the divs in the webpages.
This commit resolves that

- Resolved #72

--- a/webresearcher/custom.css
+++ b/webresearcher/custom.css
@@ -237,7 +237,7 @@
   text-decoration: underline;
 }
 .tooltip {
-  position: absolute;
+  position: fixed;
   /* background-color: black;
   color: white; */
   /* padding: 5px; */
