--- a/webresearcher/custom.css
+++ b/webresearcher/custom.css
@@ -43,10 +43,10 @@
   /* transition: all 0.01s ease; Increased transition duration for smoother effect */
 }
 
-.WBJSNote:hover {
+/* .WBJSNote:hover {
   box-shadow: 0px 12px 20px 0px rgba(0,0,0,0.3);
   transform: scale(1.5);
-}
+} */
 
 
 .mover {
