--- a/wbjs-server/ext_libs/blog.css
+++ b/wbjs-server/ext_libs/blog.css
@@ -67,7 +67,7 @@
 .note-content {
     position:relative;
     font-family:  "Times New Roman", serif;
-    left:3%;
+    /* left:3%; */
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
     grid-gap: 0.3em;
