--- a/wbjs-server/ext_libs/blog.css
+++ b/wbjs-server/ext_libs/blog.css
@@ -75,6 +75,18 @@
     margin: 0 auto;
     row-gap: 0.3em;
 }
+.note-content-singleNote {
+    position:relative;
+    font-family:  "Times New Roman", serif;
+    /* left:3%; */
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(600px, 1fr));
+    grid-gap: 0.3em;
+    width: 54%;
+    margin: 0 auto;
+    row-gap: 0.3em;
+}
+
 
 .note {
     border: 1px solid #ccc;
@@ -91,6 +103,7 @@
 
 .note-title {
     font-size: 16px;
+    text-align: center;;
     font-weight: bold;
     margin-bottom: 10px;
 }
@@ -196,7 +209,7 @@
 }
 
 .result-summary {
-    font-size: 14px;
+    font-size: 15px;
     color: #545454;
 }
 /* .tagSidebar {
